Add Union template builder method per member rb=193265